# hx11-control-system

./: .cproject  .gitignore  .mxproject  .pre-commit-config.yaml  .project  CMakeLists.txt  INA260 Testing.ioc  INA260 Testing.launch  README.md  ci.yml  example-ci.yml
.github/workflows/: ci.yml
3Thermistor/: .cproject  .mxproject  .project  3Thermistor Debug.launch  3Thermistor.ioc
3Thermistor/Core/Inc/: main.h  stm32h7xx_it.h  thermistor.h
3Thermistor/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  thermistor.cpp
3Thermistor/Debug/: 3Thermistor.elf  3Thermistor.list  3Thermistor.map  makefile  objects.list
INA260/: .cproject  .mxproject  .project  INA260 Testing.ioc  INA260 Testing.launch
NTC_Thermistor/: .cproject  .mxproject  .project  NTC_Thermistor Debug.launch  NTC_Thermistor.ioc
NTC_Thermistor/Core/Inc/: thermistor.h
NTC_Thermistor/Core/Src/: main.c  stm32h7xx_hal_msp.c  thermistor.cpp
esp/ESP-NOW-Laptop/: ESP-NOW-Laptop.ino
esp/ESP-NOW-STM/: ESP-NOW-STM.ino
gui/: index.html  package-lock.json  package.json
gui/src/: App.css  App.jsx
gui/src/components/: BatteryVoltageRow.jsx  BottomRow.jsx  Card.jsx  Dot.jsx  EStopModal.jsx  Footer.jsx  Header.jsx  MiddleRow.jsx  StopOctagon.jsx  TopRow.jsx
hx11-sensor-integration/: .cproject  .mxproject  .project  hx11-sensor-integration.ioc  hx11-tof Debug.launch  main_diff.txt
hx11-sensor-integration/Core/Inc/: MPU6050.h  VL6180.h  can.h  fsm_actions.h  main.h  pod_types.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  throttleDriver.h  time_utils.h
src/: main.cpp
(+48 files in other folders)
